@@ -3,10 +3,13 @@ package com.demo.config;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.security.Keys;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
+import javax.crypto.SecretKey;
+import java.security.Key;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -17,7 +20,9 @@ import java.util.stream.Collectors;
 @Component
 public class JwtUtil {
 
-    private final String SECRET_KEY = "wzIyFicyMpYmSuKttP00ccsE8UO19mGPdUSeot1r3wZ8wo4sC6";
+//    private final String SECRET_KEY = "wzIyFicyMpYmSuKttP00ccsE8UO19mGPdUSeot1r3wZ8wo4sC6";
+    private static final String SECRET = "wzIyFicyMpYmSuKttP00ccsE8UO19mGPdUSeot1r3wZ8wo4sC6";
+    private static final SecretKey SECRET_KEY = Keys.hmacShaKeyFor(SECRET.getBytes());
 
     public String extractUsername(String token) {
         return extractClaim(token, Claims::getSubject);
@@ -32,11 +37,10 @@ public class JwtUtil {
         return claimsResolver.apply(claims);
     }
 
-    private Claims extractAllClaims(String token) {
+    public Claims extractAllClaims(String token) {
         return Jwts.parser()
-                .setSigningKey(SECRET_KEY)
-                .parseClaimsJws(token)
-                .getBody();
+                .verifyWith(SECRET_KEY)
+                .build().parseSignedClaims(token).getPayload();
     }
 
     private Boolean isTokenExpired(String token) {
@@ -54,20 +58,21 @@ public class JwtUtil {
     }
 
     private String createToken(Map<String, Object> claims, UserDetails subject) {
-        System.out.println(claims);
 
-        List<String> roles = subject.getAuthorities()
-                .stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+        List<String> roles = subject.getAuthorities().stream()
+                .map(auth -> auth.getAuthority().replace("ROLE_", ""))
+                .toList();
+
+        System.out.println(roles);
+        System.out.println(subject.getAuthorities());
 
         return Jwts.builder()
-                .setClaims(claims)
-                .setSubject(subject.getUsername())
+                .claims(claims)
+                .subject(subject.getUsername())
                 .claim("roles", roles)
-                .setIssuedAt(new Date(System.currentTimeMillis()))
-                .setExpiration(new Date(System.currentTimeMillis() + 1000 * 60 * 60 * 10)) // 10 hours
-                .signWith(SignatureAlgorithm.HS256, SECRET_KEY)
+                .issuedAt(new Date(System.currentTimeMillis()))
+                .expiration(new Date(System.currentTimeMillis() + 1000 * 60 * 60 * 10)) // 10 hours
+                .signWith(SECRET_KEY)
                 .compact();
     }
 }
